--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,7 +5,7 @@
   
   <div class="panel-body">
    <% @messages.each do |message| %>
-    <span class="label label-info"><% message.name %></span>
+    <span class="label label-info"><%= message.name %></span>
     <%= message.body %>
     <br>
    <% end %>    
@@ -13,11 +13,18 @@
 </div>
 
 
-<%= form_for(Message.new) do |f| %>
-  名前:
-  <%= f.text_field :name %>
-  
-  内容:
-  <%= f.text_field :body %>
+<%= form_for(Message.new, :html => {:class => 'form-horizontal' }) do |f| %>
+  <div class="form-group">
+    <label for="message_name" class="col-sm-2 control-label">名前:</label>
+    <div class="col-sm-10">
+  <%= f.text_field :name, class: "form-control" %>
+    </div> 
+   </div> 
+   <div class="form-group">
+    <label for="message_body" class="col-sm-2 control-label">内容:</label>
+    <div class="col-sm-10">
+  <%= f.text_area :body, size: "30×5" , class: "form-control" %>
+  　</div> 
+   </div> 
   <%= f.submit class: "btn btn-sm btn-primary" %>
 <% end %>
