--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -15,16 +15,20 @@
 
 <%= form_for(Message.new, :html => {:class => 'form-horizontal' }) do |f| %>
   <div class="form-group">
-    <label for="message_name" class="col-sm-2 control-label">名前:</label>
+   <label for="message_name" class="col-sm-2 control-label">名前:</label>
     <div class="col-sm-10">
   <%= f.text_field :name, class: "form-control" %>
     </div> 
-   </div> 
-   <div class="form-group">
-    <label for="message_body" class="col-sm-2 control-label">内容:</label>
+  </div> 
+  <div class="form-group">
+   <label for="message_body" class="col-sm-2 control-label">内容:</label>
     <div class="col-sm-10">
-  <%= f.text_area :body, size: "30×5" , class: "form-control" %>
-  　</div> 
+  <%= f.text_area :body, size: "30x5" , class: "form-control" %>
    </div> 
-  <%= f.submit class: "btn btn-sm btn-primary" %>
+  </div>
+  <div class="form-group">
+   <div class="col-sm-offset-2 col-sm-10">
+    <%= f.submit class: "btn btn-sm btn-primary" %> 
+   </div>
+  </div>
 <% end %>
