--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,7 +5,7 @@
   
   <div class="panel-body">
    <% @messages.each do |message| %>
-    <span class="label label-info"><% message.name %></span>
+    <span class="label label-info"><%= message.name %></span>
     <%= message.body %>
     <br>
    <% end %>    
