--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,11 +12,10 @@
   </div>
 </div>
 
-
-<%= form_for(@message), :html => {:class => 'form-horizontal' }) do |f| %>
+<%= form_for(@message, :html => {:class => 'form-horizontal' }) do |f| %>
   <% if @message.errors.present? %>
-    <div class="alart alart-danger">
-      <%= alart %>
+    <div class="alert alert-danger">
+      <%= alert %>
       <ul>
         <% @message.errors.full_messages.each do |full_message| %>
           <li>
